        options, which specify a mips64 processor
401112  LLVM 5.0 generates comparison against partially initialized data
401277  More bugs in z13 support
401454  Add a --show-percs option to cg_annotate and callgrind_annotate.
401578  drd: crashes sometimes on fork()
401627  memcheck errors with glibc avx2 optimized wcsncmp
401822  none/tests/ppc64/jm-vmx fails and produces assembler warnings
402006  mark helper regs defined in final_tidyup before freeres_wrapper call
402048  WARNING: unhandled ppc64[be|le]-linux syscall: 26 (ptrace)
402123  invalid assembler opcodes for mips32r2
402134  assertion fail in mc_translate.c (noteTmpUsesIn) Iex_VECRET on arm64
402327  Warning: DWARF2 CFI reader: unhandled DW_OP_ opcode 0x13 (DW_OP_drop)
402341  drd/tests/tsan_thread_wrappers_pthread.h:369: suspicious code ?
402351  mips64 libvexmultiarch_test fails on s390x
402369  Overhaul DHAT
402395  coregrind/vgdb-invoker-solaris.c: 2 * poor error checking
402480  Do not use %rsp in clobber list
402481  vbit-test fails on x86 for Iop_CmpEQ64 iselInt64Expr Sar64
402515  Implement new option --show-error-list=no|yes / -s
402519  POWER 3.0 addex instruction incorrectly implemented
402781  Redo the cache used to process indirect branch targets
403123  vex amd64->IR:0xF3 0x48 0xF 0xAE 0xD3 (wrfsbase)
403552  s390x: wrong facility bit checked for vector facility
404054  memcheck powerpc subfe x, x, x initializes x to 0 or -1 based on CA
404638  Add VG_(replaceIndexXA)
404888  autotools cleanup series
405079  unhandled ppc64le-linux syscall: 131 (quotactl)
405182  Valgrind fails to build with Clang
405356  PPC64, xvcvsxdsp, xvcvuxdsp are supposed to write the 32-bit result to
        the upper and lower 32-bits of the 64-bit result
405362  PPC64, vmsummbm instruction doesn't handle overflow case correctly
405363  PPC64, xvcvdpsxws, xvcvdpuxws, do not handle NaN arguments correctly.
405365  PPC64, function _get_maxmin_fp_NaN() doesn't handle QNaN, SNaN case
        correctly.