@@ -98,6 +98,9 @@ where XXXXXX is the bug number as listed below.
 401578  drd: crashes sometimes on fork()
 401627  memcheck errors with glibc avx2 optimized wcsncmp
 401822  none/tests/ppc64/jm-vmx fails and produces assembler warnings
+401827  none/tests/ppc64/test_isa_2_06_part3 failure on ppc64le (xvrsqrtesp)
+401828  none/tests/ppc64/test_isa_2_06_part1 failure on ppc64le (fcfids and
+        fcfidus)
 402006  mark helper regs defined in final_tidyup before freeres_wrapper call
 402048  WARNING: unhandled ppc64[be|le]-linux syscall: 26 (ptrace)
 402123  invalid assembler opcodes for mips32r2
